--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -29,3 +29,11 @@ Total: around 5 j/h
 TODO v1.1
     - GUI Tools improvements (2 j/h)
     
+    
+    
+    
+TODO:
+    GUI with JSON configurations for setting/reading values
+    save/load config
+    tosi and fromsi with motor characteristics
+    
